# DiscordSubstitutionTableBot

./: .gitignore  Aptfile  Procfile  README.md  _main.py  attachment_database.py  dsbapi.py  keep_alive.py  main.py  pages.json  preview_factory.py  pyproject.toml  replacement_types.py  server_database.py  timetable_parser.py  unknowns.txt  willi_parser.py
css/: untis-html.css
